--- a/x-springcloud-euraka/src/main/resources/application.yml
+++ b/x-springcloud-euraka/src/main/resources/application.yml
@@ -1,6 +1,26 @@
+#server config
+server:
+  port: 2102
 spring:
   application:
-    name: x-eureka
-  profiles:
-    active: dev
+    name: x-eureka-2
 
+eureka:
+  server:
+    # 保护机制 true开启 false关闭
+    enable-self-preservation: true
+    # 设置保护机制权重 默认0.85
+    renewal-percent-threshold: 0.5
+    # 剔除失效服务间隔
+    eviction-interval-timer-in-ms: 6000
+  client:
+    # 是否向服务注册中心注册自己
+    register-with-eureka: true
+    # 是否启用获取服务注册信息,因为这是一个单点的Eureka Server，不需要同步其他的Eureka Server节点的数据，故而设为false
+    fetch-registry: true
+    service-url:
+      defaultZone: http://x-eureka-1:2101/eureka/
+  # 使用ip替代实例名
+  instance:
+    prefer-ip-address: false
+    hostname: x-eureka-2
