update: 修改docker-compose单项目启动

--- a/x-springcloud-euraka/Dockerfile
+++ b/x-springcloud-euraka/Dockerfile
@@ -1,10 +1,10 @@
 FROM anapsix/alpine-java:8_server-jre_unlimited
 
-RUN mkdir -p /home/workspace2
+RUN mkdir -p /home/workspace/x-eureka
 
-WORKDIR /home/workspace2
+WORKDIR /home/workspace/x-eureka
 
-EXPOSE 2102
+EXPOSE 2100
 
 ADD ./target/x-springcloud-euraka-1.0.0-SNAPSHOT.jar ./app.jar
 
