--- a/x-springcloud-euraka/src/main/resources/application.yml
+++ b/x-springcloud-euraka/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 #server config
 server:
-  port: 2102
+  port: 2100
 spring:
   application:
-    name: x-eureka-2
+    name: x-eureka
 
 eureka:
   server:
@@ -15,12 +15,12 @@ eureka:
     eviction-interval-timer-in-ms: 6000
   client:
     # 是否向服务注册中心注册自己
-    register-with-eureka: true
+    register-with-eureka: false
     # 是否启用获取服务注册信息,因为这是一个单点的Eureka Server，不需要同步其他的Eureka Server节点的数据，故而设为false
-    fetch-registry: true
+    fetch-registry: false
     service-url:
-      defaultZone: http://x-eureka-1:2101/eureka/
+      defaultZone: http://x-eureka:2100/eureka/
   # 使用ip替代实例名
   instance:
     prefer-ip-address: false
-    hostname: x-eureka-2
+    hostname: x-eureka
