--- a/x-springcloud-euraka/docker-compose-dev/docker-compose.yml
+++ b/x-springcloud-euraka/docker-compose-dev/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       MYSQL_ROOT_HOST: "%"
     volumes:
       - "/Users/xian/Documents/docker/volume/mysql/data:/var/lib/mysql"          # 挂载数据目录
-      - "/Users/xian/Documents/docker/volume/mysql/conf:/etc/mysql/conf.d"       # 挂载配置文件目录
+      - "/Users/xian/Documents/docker/volume/mysql/conf:/etc/mysql"              # 挂载配置文件目录
 
   x-redis:
     image: redis:latest
