--- a/x-springcloud-euraka/docker-compose-prod/docker-compose.yml
+++ b/x-springcloud-euraka/docker-compose-prod/docker-compose.yml
@@ -27,10 +27,9 @@ services:
     ports:
       - "3306:3306"
     environment:
+      TZ: "Asia/Shanghai"
       MYSQL_ROOT_PASSWORD: "xmb123456"
       MYSQL_ROOT_HOST: "%"
-      SET_CONTAINER_TIMEZONE: 'true'
-      CONTAINER_TIMEZONE: 'Asia/Shanghai'
     volumes:
       - "/home/docker/volume/mysql/data:/var/lib/mysql"          # 挂载数据目录
       - "/home/docker/volume/mysql/conf:/etc/mysql"              # 挂载配置文件目录
